# diff-tool

./: .gitignore  CMakeLists.txt  README.md
include/diff/core/: document.h  log.h  settings.h  state.h
include/diff/display/: strings.h  window.hpp
include/diff/display/dialog/: about.hpp  format.hpp  open.hpp
include/diff/display/menu/: edit.hpp  file.hpp  help.hpp  view.hpp
include/diff/display/pane/: side.hpp  text.hpp
include/diff/proc/: run_diff.h
include/diff/util/: about.h  atomic.h  c_unique_ptr.hpp  common.h  error.h  file_utils.h  memory.h  string_utils.h  thread.h
src/: main.cpp
src/core/: config_parse.c  document.c  log.c  settings.c  state.c
src/core/operations/: file_menu_ops.c
src/display/: strings.c  window.cpp
src/display/dialog/: about.cpp  format.cpp  open.cpp
src/display/menu/: edit.cpp  file.cpp  help.cpp  view.cpp
src/display/pane/: side.cpp  text.cpp
src/proc/: run_diff.c
src/util/: about.c  error.c  file_utils.c  memory.c  string_utils.c  thread_unix.c  thread_windows.c
